--- a/main/templates/aws-mirovoy-ref-arch-02-securitygroups.yaml
+++ b/main/templates/aws-mirovoy-ref-arch-02-securitygroups.yaml
@@ -29,14 +29,18 @@ Metadata:
         Parameters:
           - SshAccessCidr
           - Vpc
-          - VpcStackName
-          - NumberOfAZs
+          - AppSubnet1Cidr
+          - AppSubnet2Cidr
       - Label:
           default: Optional security groups to create
         Parameters:
           - CreateMailSecGroup
 
     ParameterLabels:
+      AppSubnet1Cidr:
+        default: App Subnet 1
+      AppSubnet2Cidr:
+        default: App Subnet 2
       CreateMailSecGroup:
         default: Create a security group for mail servers
       NumberOfAZs:
@@ -45,17 +49,26 @@ Metadata:
         default: SSH Access From
       Vpc:
         default: Vpc Id
-      VpcStackName:
-        default: VPC Stack Name
 
 Parameters:
-  NumberOfAZs:
-    AllowedValues:
-      - 2
-    Default: 2
-    Description: Number of Availability Zones to use in the VPC. Currently
-      limited to exactly 2.
-    Type: Number
+  AppSubnet1Cidr:
+    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/(1[6-9]|2[0-8])'
+    ConstraintDescription: CIDR block parameter must be in the form
+      x.x.x.x/16-28
+    Default: 10.0.4.0/22
+    Description: CIDR block for App subnet 1 located in Availability Zone 1.
+      NAT instances in Public Availability Zone 1 will accept connections
+      on ports 80 and 443 from this CIDR block.
+    Type: String
+  AppSubnet2Cidr:
+    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/(1[6-9]|2[0-8])'
+    ConstraintDescription: CIDR block parameter must be in the form
+      x.x.x.x/16-28
+    Default: 10.0.8.0/22
+    Description: CIDR block for App subnet 1 located in Availability Zone 1.
+      NAT instances in Public Availability Zone 1 will accept connections
+      on ports 80 and 443 from this CIDR block.
+    Type: String
   SshAccessCidr:
     AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
     Description: The CIDR IP range that is permitted to SSH to bastion
@@ -67,14 +80,6 @@ Parameters:
     AllowedPattern: ^(vpc-)([a-z0-9]{8}|[a-z0-9]{17})$
     Description: The Vpc Id of an existing Vpc.
     Type: AWS::EC2::VPC::Id
-  VpcStackName:
-    AllowedPattern: ^([a-zA-Z0-9]+[a-zA-Z0-9\-]*)$
-    ConstraintDescription: "A stack name can contain only alphanumeric
-      characters (case-sensitive) and hyphens. It must start with an
-      alphabetic character and can't be longer than 128 characters."
-    Description: The name of the stack that was used to create the VPC
-    MaxLength: 128
-    Type: String
   CreateMailSecGroup:
     AllowedValues:
       - 'True'
@@ -86,11 +91,9 @@ Parameters:
 Conditions:
 
   2AZs:
-    !Equals ['2', !Ref NumberOfAZs]
+    !Not [!Equals ['', !Ref AppSubnet2Cidr]]
   WantsMail:
     !Equals ['True', !Ref CreateMailSecGroup]
-  WantsNothing:
-    !Not [!Equals ['True', !Ref CreateMailSecGroup]]
 
 Resources:
 
@@ -120,13 +123,11 @@ Resources:
         - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
-          CidrIp:
-            Fn::ImportValue: !Sub '${VpcStackName}:AppSubnet1Cidr'
+          CidrIp: !Ref AppSubnet1Cidr
         - IpProtocol: tcp
           FromPort: 443
           ToPort: 443
-          CidrIp:
-            Fn::ImportValue: !Sub '${VpcStackName}:AppSubnet1Cidr'
+          CidrIp: !Ref AppSubnet1Cidr
       VpcId:
         !Ref Vpc
 
@@ -138,8 +139,7 @@ Resources:
       IpProtocol: tcp
       FromPort: 80
       ToPort: 80
-      CidrIp:
-        Fn::ImportValue: !Sub '${VpcStackName}:AppSubnet2Cidr'
+      CidrIp: !Ref AppSubnet2Cidr
 
   NatSecurityGroupIngress2port443:
     Type: AWS::EC2::SecurityGroupIngress
@@ -149,44 +149,39 @@ Resources:
       IpProtocol: tcp
       FromPort: 443
       ToPort: 443
-      CidrIp:
-        Fn::ImportValue: !Sub '${VpcStackName}:AppSubnet2Cidr'
-
-  NatSecurityGroupIngressForMail:
-    Type: AWS::EC2::SecurityGroupIngress
-    Condition: WantsMail
-    Properties:
-      GroupId: !Ref NatSecurityGroup
-      IpProtocol: tcp
-      FromPort: 25
-      ToPort: 25
-      SourceSecurityGroupId: !Ref MailSecurityGroup
-
-  DatabaseSecurityGroupMail:
-    Type: AWS::EC2::SecurityGroup
-    Condition: WantsMail
-    Properties:
-      GroupDescription: Security group for RDS Databases
-      SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 3306
-          ToPort: 3306
-          SourceSecurityGroupId: !Ref MailSecurityGroup
-      VpcId:
-        !Ref Vpc
+      CidrIp: !Ref AppSubnet2Cidr
 
   DatabaseSecurityGroup:
     Type: AWS::EC2::SecurityGroup
-    Condition: WantsNothing
     Properties:
       GroupDescription: Security group for RDS Databases
       SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: 3306
           ToPort: 3306
-          CidrIp: 10.0.0.0/20
+          CidrIp: !Ref AppSubnet1Cidr
       VpcId:
         !Ref Vpc
+
+  DatabaseSecurityGroupIngressApp2:
+    Type: AWS::EC2::SecurityGroupIngress
+    Condition: 2AZs
+    Properties:
+      GroupId: !Ref DatabaseSecurityGroup
+      IpProtocol: tcp
+      FromPort: 3306
+      ToPort: 3306
+      CidrIp: !Ref AppSubnet2Cidr
+
+  DatabaseSecurityGroupIngressMail:
+    Type: AWS::EC2::SecurityGroupIngress
+    Condition: WantsMail
+    Properties:
+      GroupId: !Ref DatabaseSecurityGroup
+      IpProtocol: tcp
+      FromPort: 3306
+      ToPort: 3306
+      SourceSecurityGroupId: !Ref MailSecurityGroup
 
   MailSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -216,10 +211,6 @@ Resources:
           FromPort: 993
           ToPort: 993
           CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
-          FromPort: 995
-          ToPort: 995
-          CidrIp: 0.0.0.0/0
       VpcId:
         !Ref Vpc
 
@@ -227,23 +218,13 @@ Outputs:
   BastionSecurityGroup:
     Description: Security group for jump/bastion servers
     Value: !Ref BastionSecurityGroup
-    Export:
-      Name: !Join [":", [!Ref "AWS::StackName", BastionSecurityGroup]]
-  DatabaseSecurityGroupMail:
-    Condition: WantsMail
-    Description: Security group for RDS database access
-    Value: !Ref DatabaseSecurityGroupMail
-    Export:
-      Name: !Join [":", [!Ref "AWS::StackName", DatabaseSecurityGroup]]
   DatabaseSecurityGroup:
-    Condition: WantsNothing
     Description: Security group for RDS database access
     Value: !Ref DatabaseSecurityGroup
-    Export:
-      Name: !Join [":", [!Ref "AWS::StackName", DatabaseSecurityGroup]]
   MailSecurityGroup:
     Condition: WantsMail
     Description: Security group for MX servers
     Value: !Ref MailSecurityGroup
-    Export:
-      Name: !Join [":", [!Ref "AWS::StackName", MailSecurityGroup]]
+  NatSecurityGroup:
+    Description: Security group for NAT instances
+    Value: !Ref NatSecurityGroup
