--- a/main/templates/aws-mirovoy-ref-arch-04-mail.yaml
+++ b/main/templates/aws-mirovoy-ref-arch-04-mail.yaml
@@ -11,17 +11,20 @@ Metadata:
   Authors:
     Description: Chris Richardson (cwr@mirovoysales.com)
   License:
-    Description: 'Copyright 2018 Mirovoy Sales, s.r.o.  and its
-      affiliates. All Rights Reserved.  This is a derivative work
-      of an Amazon template, and as such falls under the derivate
-      works section of the the Amazon Software License (the "License").
-      You may not use this file except in compliance with the
-      License. A copy of the License is located at
-      http://aws.amazon.com/asl/ This file is distributed on an "AS
-      IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
-      either express or implied. See the License for the specific
-      language governing permissions and limitations under the
-      License.'
+    Description: 'Copyright 2018-2019 Mirovoy Sales, s.r.o. and its affiliates.
+      All Rights Reserved.
+      SPDX-License-Identifier: MIT-0'
+
+  History:
+    Description: 'This work is based off of the aws-refarch-wordpress
+      templates originally authored by Darryl Osborne (darrylo@amazon.com).
+      The mail server details are taken from the famous Flurdy guide
+      (http://flurdy.com/docs/postfix/) by Ivar Abrahamsen
+      (http://flurdy.com/docs/postfix/#author) as extended by Jon Jerome
+      (https://xec.net/dovecot-migration/#author) for Dovecot support.'
+
+    FlurdyEdition: 14
+    XECRelease: 2018-03-30
 
   AWS::CloudFormation::Interface:
     ParameterGroups:
