--- a/templates/aws-mirovoy-ref-arch-03-nat.yaml
+++ b/templates/aws-mirovoy-ref-arch-03-nat.yaml
@@ -91,7 +91,7 @@ Parameters:
       choice is 2.'
     Type: Number
   AdminUser:
-    AllowedPattern: "^[a-z][-a-z0-9]*$"
+    AllowedPattern: "^[a-z][-a-z0-9]*$|^$"
     ConstraintDescription: "Must be a valid username for the OS to be used.
       For sanity's sake, confining this to starting with a lower-case letter,
       followed by an arbitrary number of lower-case letters, numbers, and the
