Add default root username for database to match Flurdy

--- a/templates/aws-mirovoy-ref-arch-03-rds.yaml
+++ b/templates/aws-mirovoy-ref-arch-03-rds.yaml
@@ -100,9 +100,10 @@ Parameters:
     Type: String
   DatabaseMasterUsername:
     AllowedPattern: ^([a-zA-Z0-9]*)$
-    Description: The "root" user to configure for the Amazon RDS database.
     ConstraintDescription: "Must contain only alphanumeric characters
       (minimum 8; maximum 16)."
+    Default: root
+    Description: The "root" user to configure for the Amazon RDS database.
     MaxLength: 32
     MinLength: 1
     Type: String
