Fix syntax. Add NoSslCertificate condition to default listener, so we don't get a conflict on the port 80 listener for HTTP redirect when we do have an SSL cert.

--- a/templates/aws-mirovoy-ref-arch-03-publicalb.yaml
+++ b/templates/aws-mirovoy-ref-arch-03-publicalb.yaml
@@ -91,6 +91,7 @@ Conditions:
 
 Resources:
   PublicAlbListenerNoSslCertificate:
+    Condition: NoSslCertificate
     Type: AWS::ElasticLoadBalancingV2::Listener
     Properties:
       DefaultActions:
@@ -103,17 +104,19 @@ Resources:
   PublicAlbListenerHttpRedirect:
     Condition: SslCertificate
     Type: AWS::ElasticLoadBalancingV2::Listener
+    DependsOn:
+      - PublicApplicationLoadBalancer
     Properties:
       DefaultActions:
         - Order: 100
-        - RedirectConfig:
+          RedirectConfig:
             Host: "#{host}"
             Path: "/#{path}"
             Port: 443
             Protocol: "HTTPS"
             Query: "#{query}"
-            Status_Code: HTTP_302
-        - Type: redirect
+            StatusCode: HTTP_302
+          Type: redirect
       LoadBalancerArn: !Ref PublicApplicationLoadBalancer
       Port: 80
       Protocol: HTTP
